charts/penpot/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: penpot
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: sh-penpot
    gethomepage.dev/name: Penpot
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - penpot.int.imdevinc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: penpot
          namespace: penpot
          port: 8080
